--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,14 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/HospitalCMSystem
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\support\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-5.1.15-bin.jar=C:\\Users\\support\\Downloads\\mysql-connector-java-5.1.15-bin.jar
 file.reference.mysql-connector-java-8.0.29.jar=D:\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-8.0.29.jar}:\
-    ${file.reference.mysql-connector-java-5.1.15-bin.jar}
+    ${file.reference.mysql-connector-java-8.0.29.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
